@@ -1,8 +1,10 @@
 PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 ?? ??? 2008, PHP 5.2.6
-- Fixed bug #43301 (mb_ereg*_replace() crashes when replacement string is invalid
-  PHP expression and 'e' option is used). (Jani)
+- Fixed bug #43092 (curl_copy_handle() crashes with > 32 chars long URL).
+  (Jani)
+- Fixed bug #43301 (mb_ereg*_replace() crashes when replacement string is
+  invalid PHP expression and 'e' option is used). (Jani)
 - Fixed bug #43293 (Multiple segfaults in getopt()). (Hannes)
 - Fixed bug #43279 (pg_send_query_params() converts all elements in 'params' 
   to strings). (Ilia)
